# minirt

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.rt  camera.c  camera.h  cornell_duck.rt  cylinder.rt  error.rt  false.rt  ft_atof.c  main.c  mano.rt  object.c  scene.rt  shapes.rt  test.rt  test2.rt  test3.rt  test4.rt
geotrace/: CMakeLists.txt  Makefile  geotrace.h
geotrace/src/math/: solve.c
geotrace/src/matrix/: matrix.c  matrix2.c  matrix3.c
geotrace/src/objects/: cube.c  cube.h  cube2.c  cylinder.c  cylinder.h  cylinder2.c  line.c  objects.c  plane.c  sphere.c
geotrace/src/vectors/: vec3d.c  vec3d2.c  vec3d3.c
libft/: CMakeLists.txt  Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstclear_bonus.c  ft_lstdelone_bonus.c  ft_lstiter_bonus.c  ft_lstlast_bonus.c  ft_lstmap_bonus.c  ft_lstnew_bonus.c  ft_lstsize_bonus.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
mlx/: CMakeLists.txt  Makefile
mlx_linux/: CMakeLists.txt
src/: .args.c.swp  args.c  camera.c  camera.h  check.c  gnl.c  key_handler.c  key_handler.h  light.c  light.h  main.c  minirt.h  mlx_utils.c  mlx_utils.h  mrt.h  o_main.c  object.c  object.h
src/colors/: color_shift.c  color_shift2.c  colors.c  colors.h
src/debug/: debug.c  debug.h
src/light/: light.c  light.h
src/parser/: .parse.c.swp  aggr.c  args.c  check.c  free_parsing.c  init_cylinder.c  isvalid.c  matrix_opr.c  matrix_opr.h  mrt.h  parse.c  parse.h  parse_obj.c  parse_obj.h  rotate.c  sheer.c  sheer2.c  test.hpp  utils.c
src/parser/gnl/: get_next_line.c  get_next_line.h  get_next_line_utils.c
src/rays/: ray.c  ray.h  shadow.c  vec_utils.c  vec_utils.h
