include_directories(.)
add_library(geotrace src/objects/sphere.c src/objects/line.c src/objects/plane.c src/objects/cylinder.c
        src/vectors/vec3d.c src/vectors/vec3d2.c src/math/solve.c src/matrix/matrix.c src/matrix/matrix2.c src/objects/cube.c src/objects/objects.c src/matrix/matrix3.c src/objects/cube2.c src/objects/cube.h src/objects/cylinder2.c src/objects/cylinder.h src/vectors/vec3d3.c)